--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 #
 #
-# one:
-#   name: MyString
-#   email: MyString
+tunji:
+  name: tunji
+  email: tunji@example.com
+  password_digest: <%= User.digest('password') %>
 #
 # two:
 #   name: MyString
